--- a/rtl_433/Dockerfile
+++ b/rtl_433/Dockerfile
@@ -13,7 +13,7 @@ RUN apk add --no-cache --virtual .buildDeps \
     git
 
 WORKDIR /build
-RUN git clone https://github.com/merbanan/rtl_433
+RUN git clone https://github.com/jarguel/rtl_433
 WORKDIR ./rtl_433
 
 ARG rtl433GitRevision=21.05
