--- a/rtl_433/config.json
+++ b/rtl_433/config.json
@@ -1,8 +1,8 @@
 {
   "name": "rtl_433",
   "version": "0.1.3",
-  "slug": "rtl433",
-  "description": "Receive wireless sensor data via an SDR dongle and rtl_433",
+  "slug": "rtl433_jarguel",
+  "description": "Receive wireless sensor data via an SDR dongle and rtl_433 (jarguel's fork)",
   "url": "https://github.com/jarguel/rtl_433-hass-addons/tree/main/rtl_433",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "application",
